# md2

./: .gitignore  AIDER.md  DEVPLAN.md  DEVPLAN_UI.md  Makefile  README.md  install.sh  md2.py  pyproject.toml
examples/: charts.html  charts.md  example.html  example.md
md2/: __init__.py  __main__.py  _compat.py  cli.py  compat.py  core.py  palettes.py
md2/palettes/: cool.toml  default.toml  mono.toml  pastel.toml  vivid.toml  warm.toml
tests/live/: test_conversion_e2e.py  test_edge_cases_e2e.py  test_ui_improvements_e2e.py
tests/unit/: test_chart_api_simplified.py  test_chart_css_polish.py  test_chart_css_refinement.py  test_chart_data_color.py  test_chart_normalization.py  test_chart_polish_final.py  test_chart_sizing.py  test_chart_spacing.py  test_chart_title_style.py  test_chart_visual_polish.py  test_charts.py  test_columns.py  test_frontmatter.py  test_generate_css.py  test_line_chart_connection.py  test_m50_bar_gap.py  test_m51_column_gap.py  test_m53_pie_labels.py  test_m54_line_values.py  test_m55_label_clipping.py  test_m56_58_chart_polish.py  test_m60_61.py  test_m62_63.py  test_m65_endpoint_labels.py  test_m66_decollision.py  test_m67_yaxis.py  test_m68_yaxis_alignment.py  test_m69_smart_ticks.py  test_m70_xlabels_decouple.py  test_m72_pie_inside_labels.py  test_m73_chart_border.py  test_m74_first_last_padding.py  test_m75_line_filled.py  test_m80_column_yaxis.py  test_m81_floating_bars.py  test_m82_stacked_negatives.py  test_m83_card_padding.py  test_m84_chart_title_directive.py  test_m85_xlabels_decoupled.py  test_m86_data_label_outside.py  (+13 more)
(+8 files in other folders)
