[project]
name = "md2-presenter"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.0",
    "bleach>=6.0",
]

[project.scripts]
md2 = "md2:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["md2.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: test end-to-end con I/O su disco (deselect with '-m \"not live\"')",
]
