[project]
name = "md2-presenter"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "markdown>=3.0",
    "bleach>=6.0",
    "tinycss2>=1.2",
    "jinja2>=3.0",
]

[project.scripts]
md2 = "md2.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["md2"]

[tool.hatch.build.targets.wheel.force-include]
"md2/templates" = "md2/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: test end-to-end con I/O su disco (deselect with '-m \"not live\"')",
]
